# cosmic-camera

./: Cargo.toml  README.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml
.github/workflows/: flatpak.yml
flatpak/: cargo-sources.json  flatpak-cargo-generator.py  io.github.rclinux.CosmicCamera.desktop  io.github.rclinux.CosmicCamera.metainfo.xml  io.github.rclinux.CosmicCamera.yml
src/: app.rs  capture.rs  main.rs
