[package]
name = "cosmic-camera"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-only"
authors = ["Ronald Craig <rclinux@users.noreply.github.com>"]
repository = "https://github.com/rclinux/cosmic-camera"
description = "A distro-agnostic, Wayland-native camera app for the COSMIC desktop"

[dependencies]
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "time"] }
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
anyhow = "1"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = ["tokio", "wgpu"]
